<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.startwindow.productonewindow.ProductFragment">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/oswald_bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/product_image"
        android:layout_width="0dp"
        android:layout_height="210dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_name"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_image"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/oswald_bold"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/characs_pane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price">

        <ToggleButton
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/filter_button_selector"
            android:layout_marginEnd="10dp"
            android:textOff="@string/_60"/>
        <ToggleButton
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/filter_button_selector"
            android:layout_marginEnd="10dp"
            android:textOff="@string/_60"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="10dp"
        android:id="@+id/in_basket_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/characs_pane"
        android:text="@string/to_basket"
        android:textColor="@color/white"
        android:background="@drawable/black_button_shape"/>

</androidx.constraintlayout.widget.ConstraintLayout>